@@ -752,8 +752,15 @@ gslwave_load_singlechunk_wave (GslWaveFileInfo *fi,
   if (wdsc->n_chunks == 1)
     {
       GslDataHandle *dhandle = gsl_wave_handle_create (wdsc, 0, error_p);
-      if (osc_freq > 0 && dhandle)
-        gsl_data_handle_override (dhandle, -1, -1, osc_freq);
+      if (dhandle && osc_freq > 0)
+        {
+          gchar **xinfos = NULL;
+          xinfos = bse_xinfos_add_float (xinfos, ".osc-freq", osc_freq);
+          GslDataHandle *tmp_handle = gsl_data_handle_new_add_xinfos (dhandle, xinfos);
+          g_strfreev (xinfos);
+          gsl_data_handle_unref (dhandle);
+          dhandle = tmp_handle;
+        }
       gsl_wave_dsc_free (wdsc);
       return dhandle;
     }
